// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker renderCaption Should render the given month title 1`] = `
<div
  className="kirk-datepicker-month-caption DayPicker-Caption"
>
  January 
</div>
`;

exports[`DatePicker renderCaption Should render the given month title with year if it is not the current year 1`] = `
<div
  className="kirk-datepicker-month-caption DayPicker-Caption"
>
  January 2050
</div>
`;

exports[`DatePicker renderNavbar Should render the previous/next buttons in horizontal mode 1`] = `
<div
  className=""
>
  <button
    className="kirk-button kirk-button-tertiary kirk-button-bubble kirk-datepicker-previous-month"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="kirk-icon"
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <g
        fill="none"
        stroke="#00AFF5"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeMiterlimit="10"
        strokeWidth="2"
      >
        <path
          d="M22 12H2"
        />
        <path
          d="M9 19l-7-7 7-7"
        />
      </g>
    </svg>
  </button>
  <button
    className="kirk-button kirk-button-tertiary kirk-button-bubble kirk-datepicker-next-month"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="kirk-icon"
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <g
        fill="none"
        stroke="#00AFF5"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeMiterlimit="10"
        strokeWidth="2"
        transform="rotate(180 12 12)"
      >
        <path
          d="M22 12H2"
        />
        <path
          d="M9 19l-7-7 7-7"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`DatePicker renderNavbar Should render the weekdays in vertical mode 1`] = `
<div
  aria-hidden="true"
  className="kirk-datepicker-sticky-weekdays"
  style={
    Object {
      "top": "0px",
    }
  }
>
  <div
    className="kirk-datepicker-sticky-weekdaysrow"
  >
    <div
      className="kirk-datepicker-sticky-weekday"
    >
      Su
    </div>
    <div
      className="kirk-datepicker-sticky-weekday"
    >
      Mo
    </div>
    <div
      className="kirk-datepicker-sticky-weekday"
    >
      Tu
    </div>
    <div
      className="kirk-datepicker-sticky-weekday"
    >
      We
    </div>
    <div
      className="kirk-datepicker-sticky-weekday"
    >
      Th
    </div>
    <div
      className="kirk-datepicker-sticky-weekday"
    >
      Fr
    </div>
    <div
      className="kirk-datepicker-sticky-weekday"
    >
      Sa
    </div>
  </div>
</div>
`;
